# vehicle-grid-integration-webapp-private

./: .env.development  .env.production  .gitignore  README.md  env.production  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-salmon-forest-09e32d403.yml  deploy_azurewebapp_api.yaml  deploy_functions.yml  tests.yml
api/: benchmark.sh  host.json  localrun.py  requirements.txt  urlpath.txt
api/api_app/: __init__.py
api/dsssimulation/: __init__.py  azureOptsXmpls.py  azure_mockup.py  dss_utils.py  funcsDss_turing.py  funcsTuring.py
api/dsssimulation/data/coords/: HV_UG-OHa_buscoords.csv
api/dsssimulation/data/ev-profile-data/: icev-week.csv  rsev-week.csv
api/functions/: _http_asgi.py
api/tests/: dsssimulation_15_1060.json
api/vgi_api/: azure_mockup.py
api/vgi_api/data/: ciredData.pkl
azure_funcs/: README.md  __init__.py  host.json  local.settings.json.example  requirements.txt  requirements_local.txt
azure_funcs/vgi_api/: __init__.py
azure_funcs/vgi_api_func/: function.json
docker_images/: README.md  vgi_api.dockerfile
infrastructure/: README.md
infrastructure/scripts/: generate_password.py  generate_qr_codes.py
infrastructure/terraform/: main.tf  terraform.tfvars  terraform.vgi.tfvars  variables.tf
src/: App.vue  main.js
src/assets/: vgi_styles.css
src/components/: GithubLink.vue  InputDetails.vue  SelectProfile.vue  WalkthroughModal.vue
src/layouts/: NavBar.vue
src/router/: index.js
src/views/: Analysis.vue  Home.vue  Resources.vue  SimulateNetwork.vue  SimulateNetworkAPI.vue
vgi_api/: README.md  pyproject.toml
vgi_api/functions/: _http_asgi.py
vgi_api/tests/: conftest.py  dsssimulation_15_1060.json  dsssimulation_5_1060.json  test_api.py  test_api_validation.py  test_health.py  test_localrun.py  test_profile_format.py
vgi_api/vgi_api/: azureOptsXmpls.py  azure_mockup.py  config.py  dss_utils.py  funcsDss_turing.py  funcsMath_turing.py  funcsPython_turing.py  funcsTuring.py  host.json  main.py  requirements.txt  slesNtwk_turing.py
vgi_api/vgi_api/data/: Book2_uss24_urban_over30k.csv  EV_urbanprofiles.csv  csv_in.csv  example_profile.csv
vgi_api/vgi_api/data/coords/: HV_UG_buscoords.csv
vgi_api/vgi_api/data/default_profiles/LV_data/: PV_output_UK_southwest_summer_2021.csv  PV_output_UK_southwest_winter_2020_2021.csv  hp_mid_weekday.csv  hp_mid_weekday_48ts.csv  hp_mid_weekend.csv  hp_mid_weekend_48ts.csv  hp_weekday.csv  hp_weekday_48ts.csv  hp_weekend.csv  hp_weekend_48ts.csv  sm_CLNR.csv  sm_CREST_CIRED.csv
vgi_api/vgi_api/data/default_profiles/MV_data/: MV_solar_plant_summer.csv  MV_solar_plant_winter.csv  fc_stations.csv
vgi_api/vgi_api/data/ev-profile-data/EV_ACN-21-07-27/: ACN_caltech--start-20210101-000000--end-20210630-000000.csv
vgi_api/vgi_api/data/heat-pumps/: mid_weekday.csv  mid_weekend.csv  weekday.csv  weekend.csv
vgi_api/vgi_api/data/heat-pumps/IndividualProfiles/: hp30_profiles_2014_1.csv  hp30_profiles_2014_7.csv  readme.txt
vgi_api/vgi_api/data/solar-profile/: Actual_41.55_-74.25_2006_UPV_101MW_5_Min_xmpl.csv  readme.txt
vgi_api/vgi_api/validation/: __init__.py  network_ids.py  response_models.py  types.py  validators.py
