[tool.poetry]
name = "vgi_api"
version = "0.1.0"
description = "The Vehicle Grid Integration API"
authors = ["Oscar Giles <ogiles@turing.ac.uk>", "Louise Bowler <lbowler@turing.ac.uk>", "David Beavan <dbeavan@turing.ac.uk>", "Pamela Wochner <pwochner@turing.ac.uk>", "Myriam Neaimeh <mneaimeh@turing.ac.uk>", "Matthew Deakin <Matthew.Deakin@newcastle.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
azure-storage-blob = "^12.9.0"
bunch = "^1.0.1"
cmocean = "^2.0"
govuk-bank-holidays = "^0.10"
hsluv = "^5.0.2"
matplotlib = "^3.5.0"
scipy = "^1.7.2"
fastapi = {extras = ["standard"], version = "^0.71.0"}
progress = "^1.6"
python-multipart = "^0.0.5"
pydantic = "^1.8.2"
uvicorn = "^0.16.0"
dss-python = "^0.10.7"

[tool.poetry.scripts]
azure_mockup = "vgi_api.azure_mockup:run_dss_simulation"


[tool.poetry.dev-dependencies]

# Install normal dss-python in development. Install linux version manually on deployment
# dss-python =  "^0.10.7.post1"
                
httpie = "^2.6.0"
black = "^21.11b1"
pytest = "^6.2.5"
devtools = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
